[metadata]
name = o2tuner
version = 0.0.2
author = Matteo Concas
author_email = mconcas@cern.ch
description = Optimization tool for ALICE O2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mconcas/o2tuner
project_urls =
    Bug Tracker = https://github.com/mconcas/o2tuner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL 3
    Operating System :: Linux, macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
max-line-length = 150
extend-ignore = C901
